--- a/Aula1/Aula1/Views/Home/Privacy.cshtml
+++ b/Aula1/Aula1/Views/Home/Privacy.cshtml
@@ -3,4 +3,14 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>
+    Quando utiliza os nossos serviços, está a confiar-nos as suas
+    informações. Compreendemos que é uma enorme responsabilidade e
+    trabalhamos arduamente para proteger as suas informações e darlhe o controlo sobre elas.
+</p>
+<p>
+    A presente Política de Privacidade destina-se a ajudá-lo a
+    compreender as informações que recolhemos, o motivo para o
+    fazermos, e como pode atualizar, gerir, exportar e eliminar as
+    suas informações.
+</p>
