--- a/Aula1/Aula1/Views/_ViewImports.cshtml
+++ b/Aula1/Aula1/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using Aula1
 @using Aula1.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, BootstrapIcons.AspNetCore
