--- a/Aula1/Aula1/wwwroot/css/site.css
+++ b/Aula1/Aula1/wwwroot/css/site.css
@@ -16,3 +16,45 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+.banner_01 {
+    background-image: url('/img/banner_01.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+}
+
+.banner_02 {
+    background-image: url('/img/banner_02.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+}
+
+.banner_03 {
+    background-image: url('/img/banner_03.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+}
+
+.banner_04 {
+    background-image: url('/img/banner_04.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+}
+
+.banner_05 {
+    background-image: url('/img/banner_05.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+}
+
+.banner_06 {
+    background-image: url('/img/banner_06.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+}
