--- a/Aula1/Aula1/Views/Shared/_Layout2.cshtml
+++ b/Aula1/Aula1/Views/Shared/_Layout2.cshtml
@@ -39,7 +39,7 @@
             </div>
         </header>
 
-        <main class="px-0 mx-0">
+        <main class="container mt-5 pt-5 text-start">
             @RenderBody()
         </main>
 
