--- a/Aula1/Aula1/Views/Cursos/Create.cshtml
+++ b/Aula1/Aula1/Views/Cursos/Create.cshtml
@@ -23,6 +23,11 @@
                     <input class="form-check-input" asp-for="Disponivel" /> @Html.DisplayNameFor(model => model.Disponivel)
                 </label>
             </div>
+            <div class="form-group form-check">
+                <label class="form-check-label">
+                    <input class="form-check-input" asp-for="EmDestaque" /> @Html.DisplayNameFor(model => model.EmDestaque)
+                </label>
+            </div>
             <div class="form-group">
                 <label asp-for="Categoria" class="control-label"></label>
                 <input asp-for="Categoria" class="form-control" />
@@ -47,6 +52,11 @@
                 <label asp-for="IdadeMinima" class="control-label"></label>
                 <input asp-for="IdadeMinima" class="form-control" />
                 <span asp-validation-for="IdadeMinima" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Preco" class="control-label"></label>
+                <input asp-for="Preco" class="form-control" />
+                <span asp-validation-for="Preco" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
