--- a/Aula1/Aula1/Views/Cursos/Delete.cshtml
+++ b/Aula1/Aula1/Views/Cursos/Delete.cshtml
@@ -25,6 +25,12 @@
             @Html.DisplayFor(model => model.Disponivel)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.EmDestaque)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.EmDestaque)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Categoria)
         </dt>
         <dd class = "col-sm-10">
@@ -53,6 +59,12 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.IdadeMinima)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Preco)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Preco)
         </dd>
     </dl>
     
