--- a/Aula1/Aula1/Views/Cursos/Details.cshtml
+++ b/Aula1/Aula1/Views/Cursos/Details.cshtml
@@ -23,6 +23,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Disponivel)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.EmDestaque)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.EmDestaque)
+        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Categoria)
         </dt>
@@ -52,6 +58,12 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.IdadeMinima)
+        </dd> 
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Preco)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Preco)
         </dd>
     </dl>
 </div>
