ficha 2, sem extra ultimo exercicio extra

--- a/Aula1/Aula1/Views/Cursos/Index.cshtml
+++ b/Aula1/Aula1/Views/Cursos/Index.cshtml
@@ -8,6 +8,12 @@
     @ViewData["Title"]
 </h1>
 
+<form>
+    <label>Pesquisa do curso:</label>
+    <input type="text" placeholder="curso a pesquisar"/>
+    <button type="submit">pesquisar</button>
+</form>
+
 <p>
     <a asp-action="Create">Adicionar Curso</a>
 </p>
