--- a/Aula1/Aula1/Views/Categorias/Index.cshtml
+++ b/Aula1/Aula1/Views/Categorias/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@model IEnumerable<Aula1.Models.Categoria>
 
 @{
+    Layout = "~/Views/Shared/_Layout2.cshtml";
     ViewData["Title"] = "Index";
 }
 
