--- a/Aula1/Aula1/Views/Cursos/Create.cshtml
+++ b/Aula1/Aula1/Views/Cursos/Create.cshtml
@@ -29,9 +29,14 @@
                 </label>
             </div>
             <div class="form-group">
-                <label asp-for="Categoria" class="control-label"></label>
-                <input asp-for="Categoria" class="form-control" />
-                <span asp-validation-for="Categoria" class="text-danger"></span>
+                <label asp-for="CategoriaId" class="control-label"></label>
+                <select 
+                    asp-for="CategoriaId" 
+                    class="form-control"
+                    asp-items="ViewBag.CategoriaId">
+
+                </select>
+                <span asp-validation-for="CategoriaId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Descricao" class="control-label"></label>
