--- a/Aula1/Aula1/Views/Cursos/Delete.cshtml
+++ b/Aula1/Aula1/Views/Cursos/Delete.cshtml
@@ -31,10 +31,10 @@
             @Html.DisplayFor(model => model.EmDestaque)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Categoria)
+            @Html.DisplayNameFor(model => model.CategoriaId)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Categoria)
+            @Html.DisplayFor(model => model.CategoriaId)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Descricao)
