--- a/Aula1/Aula1/Views/Cursos/Details.cshtml
+++ b/Aula1/Aula1/Views/Cursos/Details.cshtml
@@ -30,10 +30,10 @@
             @Html.DisplayFor(model => model.EmDestaque)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Categoria)
+            @Html.DisplayNameFor(model => model.Categoria.Nome)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Categoria)
+            @Html.DisplayFor(model => model.Categoria.Nome)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Descricao)
