--- a/Aula1/Aula1/Views/Cursos/Index.cshtml
+++ b/Aula1/Aula1/Views/Cursos/Index.cshtml
@@ -30,6 +30,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Disponivel)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Categoria.Nome)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -41,6 +44,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Disponivel)
+            </td>
+            <td>
+                    @Html.DisplayFor(modelItem => item.Categoria.Nome)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
