--- a/Aula1/Aula1/Views/Shared/_Layout2.cshtml
+++ b/Aula1/Aula1/Views/Shared/_Layout2.cshtml
@@ -29,7 +29,9 @@
                                 <li class="nav-item">
                                     <a class="nav-link text-white" asp-area="" asp-controller="Cursos" asp-action="Index">CURSOS</a>
                                 </li>
-
+                                <li class="nav-item">
+                                    <a class="nav-link text-white" asp-area="" asp-controller="Categorias" asp-action="Index">CATEGORIAS</a>
+                                </li>
 
                             </ul>
                             <partial name="_LoginPartial" />
