--- a/Aula1/Aula1/Views/Shared/_Layout.cshtml
+++ b/Aula1/Aula1/Views/Shared/_Layout.cshtml
@@ -35,6 +35,7 @@
 
 
                             </ul>
+                            <partial name="QuickSearchPartial" />
                             <partial name="_LoginPartial" />
                         </div>
                     </div>
