--- a/Aula1/Aula1/Views/Cursos/Search.cshtml
+++ b/Aula1/Aula1/Views/Cursos/Search.cshtml
@@ -1,4 +1,5 @@
-﻿@model PesquisaCursoViewModel
+﻿@using Aula1.Models.ViewModels
+@model PesquisaCursoViewModel
 
 @{
     Layout = "~/Views/Shared/_Layout2.cshtml";
