ficha 4 completa (excepto ex4)

--- a/Aula1/Aula1/Views/Cursos/Create.cshtml
+++ b/Aula1/Aula1/Views/Cursos/Create.cshtml
@@ -40,17 +40,17 @@
             </div>
             <div class="form-group">
                 <label asp-for="Descricao" class="control-label"></label>
-                <input asp-for="Descricao" class="form-control" />
+                <TextArea asp-for="Descricao" class="form-control"></TextArea>
                 <span asp-validation-for="Descricao" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="DescricaoResumida" class="control-label"></label>
-                <input asp-for="DescricaoResumida" class="form-control" />
+                <TextArea asp-for="DescricaoResumida" class="form-control"></TextArea>
                 <span asp-validation-for="DescricaoResumida" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Requisitos" class="control-label"></label>
-                <input asp-for="Requisitos" class="form-control" />
+                <TextArea asp-for="Requisitos" class="form-control"></TextArea>
                 <span asp-validation-for="Requisitos" class="text-danger"></span>
             </div>
             <div class="form-group">
