--- a/Aula1/Aula1/Views/Shared/_Layout.cshtml
+++ b/Aula1/Aula1/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/carousel.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/MyStyleSheet.css" asp-append-version="true" />
 </head>
 <body class="d-flex h-100 text-center  bg-white p-0 m-0">
     <div class="cover-container d-flex w-100 h-100 p-0 mx-auto flex-column">
@@ -31,6 +32,9 @@
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link text-white" asp-area="" asp-controller="Categorias" asp-action="Index">CATEGORIAS</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-white" asp-area="" asp-controller="Agendamentos" asp-action="Index">AGENDAMENTOS</a>
                                 </li>
 
 
