--- a/Aula1/Aula1/Views/Categorias/Edit.cshtml
+++ b/Aula1/Aula1/Views/Categorias/Edit.cshtml
@@ -21,7 +21,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Descricao" class="control-label"></label>
-                <input asp-for="Descricao" class="form-control" />
+                <TextArea asp-for="Descricao" class="form-control"></TextArea>
                 <span asp-validation-for="Descricao" class="text-danger"></span>
             </div>
             <div class="form-group form-check">
