--- a/Aula1/Aula1/Views/Cursos/Index.cshtml
+++ b/Aula1/Aula1/Views/Cursos/Index.cshtml
@@ -12,7 +12,9 @@
     <label for="TextoAPesquisar">Pesquisa de cursos:</label>
     <input type="text" id="TextoAPesquisar" name="TextoAPesquisar" 
         placeholder="texto a procurar" />
-    <button type="submit">pesquisar</button>
+    <button id="botaoPesquisa" type="submit" class="btn btn-default">
+        🔍
+    </button>
 </form>
 
 <p>
