--- a/Aula1/Aula1/Views/Home/Contactos.cshtml
+++ b/Aula1/Aula1/Views/Home/Contactos.cshtml
@@ -2,6 +2,7 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
+    Layout = "~/Views/Shared/_Layout2.cshtml";
     ViewData["Title"] = "Contactos";
 }
 <h1>@ViewData["Title"]</h1>
