--- a/Aula1/Aula1/Views/Shared/QuickSearchPartial.cshtml
+++ b/Aula1/Aula1/Views/Shared/QuickSearchPartial.cshtml
@@ -1,7 +1,11 @@
 ﻿@using (Html.BeginForm("Search", "Cursos", FormMethod.Post))
 {
     <div class="form-inline d-flex">
-        <input type="text" name="TextoAPesquisar" id="TextoAPesquisar" placeholder="curso a pesquisar" />
-        <button type="submit" class="btn btn-default ms-2 me-2">Search</button>
+        <input type="text" name="TextoAPesquisar" id="TextoAPesquisar" 
+            placeholder="Pesquisar um curso" class="form-control form-control-sm"/>
+        <button type="submit" class="btn btn-default ms-2 me-2">
+            <svg bootstrap-icon="Search" class="text-warning" width="24" height="24" 
+            aria-label="Search"></svg>
+        </button>
     </div>
 }
