ficha 3 ex17 - done

--- a/Aula1/Aula1/Views/Cursos/Index.cshtml
+++ b/Aula1/Aula1/Views/Cursos/Index.cshtml
@@ -12,6 +12,7 @@
     <label for="TextoAPesquisar">Pesquisa de cursos:</label>
     <input type="text" id="TextoAPesquisar" name="TextoAPesquisar" 
         placeholder="texto a procurar" />
+    <select name="CategoriaId" asp-items="ViewBag.CategoriaId"></select>
     <button id="botaoPesquisa" type="submit" class="btn btn-default">
         🔍
     </button>
