--- a/Aula1/Aula1/Views/Agendamentos/Delete.cshtml
+++ b/Aula1/Aula1/Views/Agendamentos/Delete.cshtml
@@ -31,16 +31,16 @@
             @Html.DisplayFor(model => model.DataFim)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DuracaoEmHoras)
+            @Html.DisplayNameFor(model => model.DuracaoHoras)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DuracaoEmHoras)
+            @Html.DisplayFor(model => model.DuracaoHoras)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DuracaoEmMinutos)
+            @Html.DisplayNameFor(model => model.DuracaoMinutos)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DuracaoEmMinutos)
+            @Html.DisplayFor(model => model.DuracaoMinutos)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Preco)
