--- a/Aula1/Aula1/Views/Agendamentos/Index.cshtml
+++ b/Aula1/Aula1/Views/Agendamentos/Index.cshtml
@@ -23,10 +23,10 @@
                 @Html.DisplayNameFor(model => model.DataFim)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.DuracaoEmHoras)
+                @Html.DisplayNameFor(model => model.DuracaoHoras)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.DuracaoEmMinutos)
+                @Html.DisplayNameFor(model => model.DuracaoMinutos)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Preco)
@@ -50,10 +50,10 @@
                 @Html.DisplayFor(modelItem => item.DataFim)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.DuracaoEmHoras)
+                @Html.DisplayFor(modelItem => item.DuracaoHoras)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.DuracaoEmMinutos)
+                @Html.DisplayFor(modelItem => item.DuracaoMinutos)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Preco)
