--- a/Aula1/Aula1/Views/Cursos/Create.cshtml
+++ b/Aula1/Aula1/Views/Cursos/Create.cshtml
@@ -2,7 +2,7 @@
 
 @{
     Layout = "~/Views/Shared/_Layout2.cshtml";
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Adicionar Curso";
 }
 
 <h1>Create</h1>
