--- a/Aula1/Aula1/Views/Cursos/Delete.cshtml
+++ b/Aula1/Aula1/Views/Cursos/Delete.cshtml
@@ -2,7 +2,7 @@
 
 @{
     Layout = "~/Views/Shared/_Layout2.cshtml";
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Eliminar Curso";
 }
 
 <h1>Delete</h1>
