--- a/Aula1/Aula1/Views/Cursos/Details.cshtml
+++ b/Aula1/Aula1/Views/Cursos/Details.cshtml
@@ -1,73 +1,35 @@
 ﻿@model Curso
 
 @{
+    ViewData["Title"] = "Detalhes de um cuso";
     Layout = "~/Views/Shared/_Layout2.cshtml";
-    ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h2 class="pb-2 border-bottom">@Model.Nome</h2>
+<p>@Html.Raw(Model.Descricao.ToString().Replace(Environment.NewLine, "<br />"))</p>
+<div class="row g-4 py-5 row-cols-1 row-cols-lg-2">
 
-<div>
-    <h4>Curso</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Nome)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Nome)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Disponivel)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Disponivel)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.EmDestaque)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.EmDestaque)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Categoria.Nome)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Categoria.Nome)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Descricao)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Descricao)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DescricaoResumida)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DescricaoResumida)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Requisitos)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Requisitos)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IdadeMinima)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IdadeMinima)
-        </dd> 
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Preco)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Preco)
-        </dd>
-    </dl>
+    <div class="feature col">
+        <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
+            <svg class="bi" width="1em" height="1em"><use xlink:href="#people-circle"></use></svg>
+        </div>
+        <h3 class="fs-2">Requisitos</h3>
+        <p>@Html.Raw(Model.Requisitos.ToString().Replace(Environment.NewLine, "<br />"))</p>
+
+    </div>
+    <div class="feature col">
+        <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
+            <svg class="bi" width="1em" height="1em"><use xlink:href="#toggles2"></use></svg>
+        </div>
+        <h3 class="fs-2">Custo</h3>
+        <p>@Model.Preco euros </p>
+
+    </div>
 </div>
+
+
 <div>
     <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
+
