--- a/Aula1/Aula1/Views/Cursos/Edit.cshtml
+++ b/Aula1/Aula1/Views/Cursos/Edit.cshtml
@@ -2,7 +2,7 @@
 
 @{
     Layout = "~/Views/Shared/_Layout2.cshtml";
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar Curso";
 }
 
 <h1>Edit</h1>
