--- a/Aula1/Aula1/Views/Shared/_Layout.cshtml
+++ b/Aula1/Aula1/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
                                     <a class="nav-link text-white" asp-area="" asp-controller="Categorias" asp-action="Index">CATEGORIAS</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-white" asp-area="" asp-controller="Agendamentos" asp-action="Index">AGENDAMENTOS</a>
+                                    <a class="nav-link text-white" asp-area="" asp-controller="Agendamentos" asp-action="Pedido">AGENDAMENTOS</a>
                                 </li>
 
 
