--- a/Aula1/Aula1/Views/Agendamentos/Pedido.cshtml
+++ b/Aula1/Aula1/Views/Agendamentos/Pedido.cshtml
@@ -1,5 +1,4 @@
 ﻿@model Aula1.Models.ViewModels.AgendamentoViewModel
-
 @{
     ViewData["Title"] = "Create";
     Layout = "~/Views/Shared/_Layout2.cshtml";
@@ -7,38 +6,41 @@
 
 <h4>Agendamento - Pedido</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Calcular">
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="TipoDeAulaId" class="control-label"></label>
-                <select asp-for="TipoDeAulaId" class="form-control" asp-items="ViewBag.TipoDeAulaId"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="Cliente" class="control-label"></label>
-                <input asp-for="Cliente" class="form-control" />
-                <span asp-validation-for="Cliente" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="DataInicio" class="control-label"></label>
-                <input asp-for="DataInicio" class="form-control" />
-                <span asp-validation-for="DataInicio" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="DataFim" class="control-label"></label>
-                <input asp-for="DataFim" class="form-control" />
-                <span asp-validation-for="DataFim" class="text-danger"></span>
-            </div>                        
+@if (User.Identity.IsAuthenticated)
+{
+    <div class="row">
+        <div class="col-md-4">
+            <form asp-action="Calcular">
+                <div asp-validation-summary="All" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="TipoDeAulaId" class="control-label"></label>
+                    <select asp-for="TipoDeAulaId" class="form-control" asp-items="ViewBag.TipoDeAulaId"></select>
+                </div>
+                <div class="form-group">
+                    <label asp-for="DataInicio" class="control-label"></label>
+                    <input asp-for="DataInicio" class="form-control" />
+                    <span asp-validation-for="DataInicio" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="DataFim" class="control-label"></label>
+                    <input asp-for="DataFim" class="form-control" />
+                    <span asp-validation-for="DataFim" class="text-danger"></span>
+                </div>                        
            
-            <div class="form-group">
-                <input type="submit" value="Calcular" class="btn btn-primary" />
-            </div>
-        </form>
+                <div class="form-group">
+                    <input type="submit" value="Calcular" class="btn btn-primary" />
+                </div>
+            </form>
+        </div>
     </div>
-</div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+    <div>
+        <a asp-action="Index">Back to List</a>
+    </div>
+
+} else {
+        <p class="alert alert-warning">
+            Só utilizadores autenticados é que podem efetuar agendamentos. Por favor, autentique-se.
+        </p>
+}
 
