--- a/Aula1/Aula1/Views/Shared/_Layout.cshtml
+++ b/Aula1/Aula1/Views/Shared/_Layout.cshtml
@@ -53,6 +53,22 @@
                                         }
                                     </ul>
                                 </li>
+                                @if (User.Identity.IsAuthenticated)
+                                {
+                                    <li class="nav-item dropdown">
+                                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                            Roles
+                                        </a>
+                                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                                <li>
+                                                <a class="dropdown-item" asp-area="" asp-controller="RoleManager" asp-action="Index">Role Manager</a>
+                                                </li>
+                                                <li>
+                                                <a class="dropdown-item" asp-area="" asp-controller="UserRolesManager" asp-action="Index">User Roles Manager</a>
+                                                </li>
+                                        </ul>
+                                    </li>
+                                }
                             </ul>
                             <partial name="QuickSearchPartial" />
                             <partial name="_LoginPartial" />
