--- a/Aula1/Aula1/Views/UserRolesManager/Details.cshtml
+++ b/Aula1/Aula1/Views/UserRolesManager/Details.cshtml
@@ -17,6 +17,7 @@
             {
                 <div class="form-check m-1">
                     <input type="hidden" asp-for="@Model[i].RoleId" />
+                    <input type="hidden" name="userId" value="@ViewBag.userId" />
                     <input type="hidden" asp-for="@Model[i].RoleName" />
                     <input asp-for="@Model[i].Selected" class="form-check-input" />
                     <label class="form-check-label" asp-for="@Model[i].Selected">@Model[i].RoleName</label>
@@ -24,7 +25,7 @@
             }
             <hr />
             <div>
-                <a class="btn btn-primary" asp-action="Index">Update</a>
+                <input class="btn btn-primary" type="submit" value="Update" />
                 <a class="btn btn-secondary" asp-action="Index">Cancel</a>
             </div>  
         </div>
