--- a/Aula1/Aula1/Views/UserRolesManager/Index.cshtml
+++ b/Aula1/Aula1/Views/UserRolesManager/Index.cshtml
@@ -40,7 +40,7 @@
                     @String.Join(',',  item.Roles)
                 </td>
                 <td>
-                    <a class="btn btn-primary" asp-action="Details" asp-route-id="@item.UserId">Manage Roles</a>
+                    <a class="btn btn-primary" asp-action="Details" asp-route-userId="@item.UserId">Manage Roles</a>
                 </td>
             </tr>
         }
