--- a/Aula1/Aula1/Views/UserRolesManager/Index.cshtml
+++ b/Aula1/Aula1/Views/UserRolesManager/Index.cshtml
@@ -9,6 +9,9 @@
     <thead>
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.Avatar)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.PrimeiroNome)
             </th>
             <th>
@@ -27,6 +30,17 @@
         @foreach (var item in Model)
         {
             <tr>
+                <td>
+                    @if (item.Avatar == null)
+                    {
+                        <img id="MyAvatar" class="img-thumbnail" style="height:75px;width:auto" src="~/img/user.png" />
+                    }
+                    else
+                    {
+                        <img id="MyAvatar" class="img-thumbnail" style="height:75px;width:auto"
+                     src="data:image/*;base64,@(Convert.ToBase64String(item.Avatar))" />
+                    }
+                </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.PrimeiroNome)
                 </td>
