--- a/Aula1/Aula1/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Aula1/Aula1/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -9,8 +9,28 @@
 <partial name="_StatusMessage" for="StatusMessage" />
 <div class="row">
     <div class="col-md-6">
-        <form id="profile-form" method="post">
+        <form id="profile-form" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-floating">
+                <div>
+                    @if (Model.Input.Avatar == null)
+                    {
+                        <img id="MyAvatar" class="img-thumbnail" src="~/img/user.png" />
+                    }
+                    else
+                    {
+                        <img id="MyAvatar" class="img-thumbnail"
+                         src="data:image/*;base64,@(Convert.ToBase64String(Model.Input.Avatar))" />
+                    }
+                </div>
+                <div>
+                    <label asp-for="Input.AvatarFile">Escolha uma imagem de perfil:</label>
+                    <input type="file" accept=".png,.jpg,.jpeg,image/png,image/jpeg"
+                           asp-for="Input.AvatarFile" class="form-control" 
+                           onchange="document.getElementById('MyAvatar').src = window.URL.createObjectURL(this.files[0])" />
+                    <span asp-validation-for="Input.AvatarFile" class="text-danger"></span>
+                </div>
+            </div>
             <div class="form-floating">
                 <input asp-for="Username" class="form-control" disabled />
                 <label asp-for="Username" class="form-label"></label>
