--- a/Aula1/Aula1/Views/UserRolesManager/Details.cshtml
+++ b/Aula1/Aula1/Views/UserRolesManager/Details.cshtml
@@ -10,7 +10,18 @@
     <div class="card">
         <div class="card-header">
             <h2>Manage User Roles</h2>
-            <span>Add/Remove Roles for User: @ViewData["UserName"]</span>
+            <span>
+                Add/Remove Roles for User: 
+                @if (ViewBag.Avatar == null)
+                {
+                    <img id="MyAvatar" class="img-thumbnail" style="height:75px;width:auto" src="~/img/user.png" />
+                }
+                else
+                {
+                    <img id="MyAvatar" class="img-thumbnail" style="height:75px;width:auto"
+                     src="data:image/*;base64,@(Convert.ToBase64String(ViewBag.Avatar))" />
+                } @ViewData["UserName"]
+            </span>
         </div>
         <div class="card-body">
             @for (int i = 0; i < Model.Count; i++)
