falta ex11 ficha7

--- a/Aula1/Aula1/Views/Cursos/Details.cshtml
+++ b/Aula1/Aula1/Views/Cursos/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Curso
 
 @{
-    ViewData["Title"] = "Detalhes de um cuso";
+    ViewData["Title"] = "Detalhes de um curso";
     Layout = "~/Views/Shared/_Layout2.cshtml";
 }
 
