--- a/Aula1/Aula1/Views/Shared/_Layout2.cshtml
+++ b/Aula1/Aula1/Views/Shared/_Layout2.cshtml
@@ -27,8 +27,18 @@
                                 <li class="nav-item">
                                     <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Contactos">CONTACTOS</a>
                                 </li>
-                                <li class="nav-item">
-                                    <a class="nav-link text-white" asp-area="" asp-controller="Cursos" asp-action="Index">CURSOS</a>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                        Cursos
+                                    </a>
+                                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                        <li>
+                                            <a class="dropdown-item" asp-area="" asp-controller="Cursos" asp-action="Index">Cursos</a>
+                                        </li>
+                                        <li>
+                                            <a class="dropdown-item" asp-area="" asp-controller="Cursos" asp-action="GraficoVendas">Graficos Vendas</a>
+                                        </li>
+                                    </ul>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link text-white" asp-area="" asp-controller="Categorias" asp-action="Index">CATEGORIAS</a>
@@ -69,8 +79,10 @@
                                         </ul>
                                     </li>
                                 }
+
                                 </ul>
                             </ul>
+                            <partial name="_carrinho" />
                             <partial name="QuickSearchPartial" />
                             <partial name="_LoginPartial" />
                         </div>
