--- a/Aula1/Aula1/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Aula1/Aula1/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -26,7 +26,7 @@
                 <div>
                     @if (Model.Input.Avatar == null)
                     {
-                        <img id="MyAvatar" class="img-thumbnail" src="~/img/user.png" />
+                        <img id="MyAvatar" class="img-thumbnail" src="~/img/user.png" style="width: 20%;"/>
                     }
                     else
                     {
